# Copyright (C) 2021 Leandro Lisboa Penz <lpenz@lpenz.org>
# This file is subject to the terms and conditions defined in
# file 'LICENSE', which is part of this source code package.

[metadata]
name = ftpsmartsync
version = 1.4.3
description = Sync local path with FTP remote efficiently by
    transmitting only what is necessary
license = GPLv2+
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
author = "Leandro Lisboa Penz"
author_email = "lpenz@lpenz.org"
url = http://github.com/lpenz/ftpsmartsync
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
scripts =
    src/bin/ftpsmartsync
python_requires = >=3.6

[options.packages.find]
where = src

[options.data_files]
share/man/man1 = 
    ftpsmartsync.1
share/doc/python3-ftpsmartsync =
    README.md
    LICENSE
    AUTHORS

[options.extras_require]
test =
    pytest
    pytest-cov
    pyftpdlib
